--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <section class="login-form">
                 <h2>Login</h2>
-                <form action="login.php" method="POST">
+                <form action="src/login.php" method="POST">
                     <div class="form-group">
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" placeholder="Enter your email" required>
